$Id$

2.0.12-pre-3
	Print an admin message indicating when subscriptions can
	   not be loaded on startup
	Fixed bug causing problems with invalid @ colors
	
2.0.12-pre-2
	Set aim_ignorelogin_timer to 15 by default
	Admin message on login/logout of AIM
	Fixed double quoting in smartzpunt
	Added timestamp to login/logout messages
	Turned history duplicates off, it's not exactly what we want
	
2.0.12-pre-1
	Fixed replies to loopback messages
	Fixed smartnarrow on classes/instances with spaces
	Don't allow duplicates in command history
	Added the 'loggingdirection' variable
	All loopback messages log to 'loopback' now
	Print an error message if trying an invalid color for a filter
	Fixed bug causing > not to go to end of editwin every time
	
2.0.11
	Updated basic help
	Display CC: in outgoing CC messages
	More AIM logout detection
	Don't proclaim "interfaces changed" on first build.
	Added the 'loopback' message type
	Added the 'loopwrite' command
	Added a timestamp to the default style
	Zpunt now works with weird regex characters
	Smart filters now work with weird regex characters
	
2.0.10
	Allow 'hostname' in filters.
	Fixed bug in reporting when no one is subbed to a class
	Added an extral newline in logging incoming zephyrs
	An admin message is displayed when you are logged out of AIM
	Print an error message and admin message if an AIM send fails
	
2.0.9
	Added the 'fancylines' variable.
	Added the 'show startup' command.
	Added feature for capturing stderr messages
	   from commands and displaying them in the errors buffer.
	Create an admin message explaning that a zephyr couldn't
	   be sent
	Better reporting of perl errors (both into the errqueue
	        and also clearing the error after displaying it).
	Allow default_style to be specified in config.
	Added errqueue
	Added command "show errors"
	Fixed bug removing newlines in backup files
	
2.0.8
	Increased size of screen name field in buddy listing
	Fixed bug with idle times causing broken pipes.
	New libfaim